[gd_scene load_steps=3 format=3 uid="uid://dx36fdpglrtub"]

[ext_resource type="Theme" uid="uid://co1xuiy4tvesr" path="res://themes/gothic_menu.tres" id="1_b2r72"]
[ext_resource type="Script" path="res://main/menu.gd" id="1_mppna"]

[node name="Menu" type="ColorRect"]
z_index = 1
custom_minimum_size = Vector2(1520, 1000)
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_b2r72")
color = Color(0.564706, 0.423529, 0, 0.901961)
script = ExtResource("1_mppna")

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 0
offset_left = 250.0
offset_top = 100.0
offset_right = 1250.0
offset_bottom = 912.0

[node name="Continue" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
text = "Continue"

[node name="NewGame" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
text = "New Game"

[node name="MusicVolume" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
color = Color(0, 0, 0.235294, 0.901961)

[node name="MusicLabel" type="Label" parent="VBox/MusicVolume"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 45.0
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBox/MusicVolume"]
modulate = Color(0.0235294, 0, 1, 1)
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
offset_top = 4.0
offset_right = 1000.0
offset_bottom = 204.0
min_value = -80.0
max_value = 0.0
step = 10.0
tick_count = 9
ticks_on_borders = true

[node name="SFXVolume" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
color = Color(0, 0, 0.235294, 0.901961)

[node name="SFXLabel" type="Label" parent="VBox/SFXVolume"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 45.0
text = "Sound Effects Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="VBox/SFXVolume"]
modulate = Color(0.0235294, 0, 1, 1)
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
offset_top = 4.0
offset_right = 1000.0
offset_bottom = 204.0
min_value = -80.0
max_value = 0.0
step = 10.0
tick_count = 9
ticks_on_borders = true

[node name="ExitGame" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBox/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="value_changed" from="VBox/MusicVolume/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBox/SFXVolume/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBox/ExitGame" to="." method="_on_exit_game_pressed"]
